--- a/src/includes/top.ejs
+++ b/src/includes/top.ejs
@@ -2,7 +2,7 @@
     <div class="c-top js-top">
         <div class="o-wrap">
             <a href="index.html" class="o-logo">
-                <img src=<%= require("./img/assets/logo.png") %> alt="Konstruktywnie" width="276" height="74">
+                <img src=<%= require("./img/assets/logo.svg") %> alt="Konstruktywnie" width="276" height="74">
             </a>
             
             <% include nav %>
