Hover in specboxes

--- a/src/sass/components/_specbox.scss
+++ b/src/sass/components/_specbox.scss
@@ -50,6 +50,10 @@
                             background-color: $c-primary;
                         }
                     }
+                    
+                    p {
+                        opacity: 1;
+                    }
                 }
             }
         }
