--- a/src/sass/components/_specbox.scss
+++ b/src/sass/components/_specbox.scss
@@ -45,6 +45,7 @@
                     
                     .num {
                         border-bottom-color: white;
+                        color: white;
                         
                         &:before {
                             background-color: $c-primary;
