--- a/src/sass/tools/_glide.scss
+++ b/src/sass/tools/_glide.scss
@@ -4,6 +4,12 @@
         height: 100%;
     }
     
+    &__slide {
+        height: auto !important;
+        
+        
+    }
+    
     &__bullet {
         width: 13px; height: 13px;
         border-radius: 50%;
