--- a/src/sass/elements/_extends.scss
+++ b/src/sass/elements/_extends.scss
@@ -16,7 +16,8 @@
 }
 
 %anim {
-    transition: all 150ms ease-out;
+    //ransition: all 150ms ease-out;
+    transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
 
 %animfix {
