--- a/src/sass/components/_contactform.scss
+++ b/src/sass/components/_contactform.scss
@@ -64,6 +64,7 @@
         
         &--submit {
             button {
+                @extend %anim;
                 margin: 60px 0 0 auto;
                 border-bottom: 1px solid $c-primary;
                 text-transform: uppercase;
@@ -72,6 +73,12 @@
                 
                 @media ( max-width: $smartphone + px ) {
                 	margin-top: 30px;
+                }
+                
+                &:hover {
+                    .desktop & {
+                        color: $c-primary;
+                    }
                 }
             }
         }
