Added Search trigger & arrows in Latest carousel

--- a/src/kontakt.ejs
+++ b/src/kontakt.ejs
@@ -1,7 +1,7 @@
 <% include ./src/includes/head %>
 <body>
 
-    <% include ./src/includes/top %>
+    <% include ./src/includes/top-kontakt %>
 
     <div class="c-contact">
         <div class="o-section o-section--bigTopPadding">
