--- a/src/pomoc-prawna.ejs
+++ b/src/pomoc-prawna.ejs
@@ -1,7 +1,7 @@
 <% include ./src/includes/head %>
 <body>
 
-    <% include ./src/includes/top %>
+    <% include ./src/includes/top-pomoc %>
 
     <div class="c-help">
         <div class="o-section o-section--bigTopPadding">
