--- a/src/sass/components/_nav.scss
+++ b/src/sass/components/_nav.scss
@@ -225,7 +225,7 @@
         }
         
         @media ( max-width: $tablet + px ) {
-        	display: none;
+        	margin: 0;
         }
         
         li {
