--- a/src/sass/settings/_global.scss
+++ b/src/sass/settings/_global.scss
@@ -24,7 +24,8 @@ $z-index: (
     header:         30,
 	top           : 40,
 	nav           : 50,
-	logo          : 30
+	logo          : 30,
+	overlay:        110
 );
 
 // Paths
