--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -30,6 +30,7 @@
 @import 'objects/lead';
 @import 'objects/logo';
 @import 'objects/more';
+@import 'objects/overlay';
 @import 'objects/scrollbar';
 @import 'objects/section';
 @import 'objects/social';
@@ -45,6 +46,7 @@
 @import 'components/homeslider';
 @import 'components/latest';
 @import 'components/nav';
+@import 'components/searchform';
 @import 'components/single';
 @import 'components/slider';
 @import 'components/specbox';
