--- a/src/wpis.ejs
+++ b/src/wpis.ejs
@@ -1,7 +1,7 @@
 <% include ./src/includes/head %>
 <body class="single-page">
 
-    <% include ./src/includes/top %>
+    <% include ./src/includes/top-baza %>
 
 
     <div class="c-single">
