--- a/src/autor.ejs
+++ b/src/autor.ejs
@@ -1,7 +1,7 @@
 <% include ./src/includes/head %>
 <body>
 
-    <% include ./src/includes/top %>
+    <% include ./src/includes/top-autor %>
 
     <div class="c-single">
         <div class="o-section o-section--bigTopPadding">
