--- a/src/includes/latest.ejs
+++ b/src/includes/latest.ejs
@@ -196,12 +196,20 @@
                             </a> 
                         </li>    		                
 					</ul>
+					
+					
+					<div class="glide__arrows" data-glide-el="controls">
+	                    <button class="glide__arrow glide__arrow--left icon-arrow-left" data-glide-dir="|<"></button>				                    
+	                    <button class="glide__arrow glide__arrow--right icon-arrow-left" data-glide-dir="|>"></button>
+	                </div>
 	       
+<!--
                     <div class="glide__bullets" data-glide-el="controls[nav]" style="display: none">
                         <button class="glide__bullet" data-glide-dir="=0"></button>
                         <button class="glide__bullet" data-glide-dir="=4"></button>
                         <button class="glide__bullet" data-glide-dir="|>"></button>
                     </div>
+-->
 				</div>
             </div>
 
