--- a/src/sass/components/_latest.scss
+++ b/src/sass/components/_latest.scss
@@ -1,40 +1,78 @@
 .c-latest {
-    width: 1600px;
+    //width: 1600px;
     margin: 0 auto;
-    padding: 110px 0 80px 0;
-    padding-bottom: 0;
-    
+    padding: 110px 0 0 0;    
     
     @media ( max-width: $base + 80px ) {
-        padding: base(110) 0 base(80) 0;
-        padding-bottom: 0;
+        padding: base(110) 0 0 0;
     }
-    
-    .o-header {
-        .o-lead {
-            @extend %underline;
-        }
-    }
-    
+        
     .o-header {
         margin-bottom: 0;
         
         @media ( max-width: $base + 80px ) {
         	margin-bottom: 0;
         }
+        
+        .o-lead {
+            @extend %underline;
+        }
     }
-
     
     .o-lead {
         &--2 {
             @media ( max-width: $smartphone_portrait + px ) {
             	font-size: rem(14);
             }
-
         }
     }
     
     .glide {
+        
+        &__arrows {
+            margin-bottom: 60px;
+            text-align: center;
+        }
+        
+        &__arrow {
+            @extend %anim;
+            font-size: rem(20);
+
+            &.glide__arrow--right {
+                &:before {
+                    display: inline-block;
+                    
+                    .desktop & {
+                        transform: scale(-1);
+                    }
+                    
+                    .mobile & {
+                        transform: translateY(-3px) scale(-1);
+                    }
+                }
+                
+                &:hover {
+                    .desktop & {
+                        transform: translateX(5px);
+                        color: $c-primary;
+                    }
+                }
+            }
+            
+            &.glide__arrow--left {
+                &:hover {
+                    .desktop & {
+                        transform: translateX(-5px);
+                        color: $c-primary;
+                    }
+                }
+            }
+        }
+        
+        &__arrow {
+            
+        }
+        
         &__slide {
             & > a {
                 display: block;
@@ -44,6 +82,14 @@
         
         &__slides {
             padding: 70px 0;
+            
+            @media ( max-width: $tablet_portrait + px ) {
+                padding: 35px 0;
+            }
+            
+            .mobile & {
+                padding: 30px 0 0 0;
+            }
         }
     }
 }
