Search in Contact page fix

--- a/src/includes/top-kontakt.ejs
+++ b/src/includes/top-kontakt.ejs
@@ -5,7 +5,7 @@
                 <img src=<%= require("./img/assets/logo.svg") %> alt="Konstruktywnie" width="276" height="74">
             </a>
             
-            <% include nav-autor %>
+            <% include nav-kontakt %>
 
             <div class="o-hamburger js-hamburger"></div>
         </div>
