--- a/src/includes/homeslider.ejs
+++ b/src/includes/homeslider.ejs
@@ -1,5 +1,5 @@
 
-    <div class="c-homeslider">
+    <div class="c-homeslider js-homeslider">
         <div class="o-wrap">
             
             <div class="c-homeslider__article">
@@ -12,4 +12,6 @@
             </div>
             
         </div>
+        
+        <div class="c-homeslider__secondary js-secondary"></div>
     </div>
