--- a/src/sass/components/_homeslider.scss
+++ b/src/sass/components/_homeslider.scss
@@ -9,7 +9,7 @@
     }
     
     @media ( max-width: $smartphone + px ) {
-        background-position: 80% center;
+        //background-position: 80% center;
     }
     
 /*
@@ -74,7 +74,7 @@
         width: 100%;
         bottom: 0;
         left: 0;
-        height: 100%;
+        height: 0;
         background: {
             image: url($path_img + '/assets/top2.jpg');
             repeat: no-repeat;
@@ -83,8 +83,10 @@
         }
         overflow: hidden;
         
+/*
         @media ( max-width: $smartphone + px ) {
             background-position: 80% center;
         }
+*/
     }
 }
