--- a/src/includes/homeslider.ejs
+++ b/src/includes/homeslider.ejs
@@ -13,5 +13,7 @@
             
         </div>
         
-        <div class="c-homeslider__secondary js-secondary"></div>
+        <div class="c-homeslider__secondary js-secondary">
+            <div class="picture"></div>
+        </div>
     </div>
