--- a/src/sass/components/_homeslider.scss
+++ b/src/sass/components/_homeslider.scss
@@ -1,11 +1,12 @@
 .c-homeslider {
-    height: calc(100vh + 150px);
+    height: 100vh;
+    //height: calc(100vh + 150px);
     max-height: 900px;
     background: {
         image: url($path_img + '/assets/top.jpg');
         repeat: no-repeat;
         position: right center;
-        //size: cover;
+        size: cover;
     }
     
     @media ( max-width: $smartphone + px ) {
@@ -75,13 +76,22 @@
         bottom: 0;
         left: 0;
         height: 0;
-        background: {
-            image: url($path_img + '/assets/top2.jpg');
-            repeat: no-repeat;
-            position: right center;
-            //size: cover;
-        }
+        
         overflow: hidden;
+        
+        .picture {
+            @extend %abs;
+            width: 100%;
+            left: 0; right: 0;  bottom: 0;
+            height: auto;
+            min-height: 100vh;
+            background: {
+                image: url($path_img + '/assets/top2.jpg');
+                repeat: no-repeat;
+                position: right center;
+                size: cover;
+            }
+        }
         
 /*
         @media ( max-width: $smartphone + px ) {
