Filters in "Baza wiedzy"

--- a/src/baza-wiedzy.ejs
+++ b/src/baza-wiedzy.ejs
@@ -23,255 +23,124 @@
                 </div>
             </div>
             
-            <div class="c-filterspanel">
+            <% include ./src/includes/filterspanel %>
+            
+            
+            <div class="c-grid__content js-mix">
+                <a href="wpis.html" class="c-grid__item mix spec-1 cat-1">
+                    <figure class="o-box">
+                        <div class="photo">
+                            <img class="b-lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src=<%= require("./img/photos/thumb-01.jpg") %> alt="" width="320" height="320">
+                        </div>
+                        
+                        <figcaption>
+                            <p class="o-lead o-lead--3">Prawo budowlane</p>
+                            <p class="o-lead o-lead--2">Lorem ipsum dolor sit amet, consectetur</p>
+                        </figcaption>
+                    </figure>
+                </a>
                 
-                <div class="c-filterspanel__box c-filterspanel__box--bg">
-                    <h4 class="title">Wybierz specjalizację</h4>
-                    
-                    <ul>
-                        <li>
-                            <input type="checkbox" checked id="spec-0">
-                            <label for="spec-0">
-                            	<i></i>
-                            	<span>Pokaż wszystkie</span>
-                            </label>
-                        </li>
+                <a href="wpis.html" class="c-grid__item mix spec-1 cat-1">
+                    <figure class="o-box">
+                        <div class="photo">
+                            <img class="b-lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src=<%= require("./img/photos/thumb-02.jpg") %> alt="" width="320" height="320">
+                        </div>
                         
-                        <li>
-                            <input type="checkbox" id="spec-1">
-                            <label for="spec-1">
-                            	<i></i>
-                            	<span>Prawo Budowlane</span>
-                            </label>
-                        </li>
+                        <figcaption>
+                            <p class="o-lead o-lead--3">Zamówienia publiczne</p>
+                            <p class="o-lead o-lead--2">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                        </figcaption>
+                    </figure>
+                </a>
+                   
+                <a href="wpis.html" class="c-grid__item mix spec-2 cat-1">
+                    <figure class="o-box">
+                        <div class="photo">
+                            <img class="b-lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src=<%= require("./img/photos/thumb-03.jpg") %> alt="" width="320" height="320">
+                        </div>
                         
-                        <li>
-                            <input type="checkbox" id="spec-2">
-                            <label for="spec-2">
-                            	<i></i>
-                            	<span>Planowanie przestrzenne </span>
-                            </label>
-                        </li>
-                        
-                        <li>
-                            <input type="checkbox" id="spec-3">
-                            <label for="spec-3">
-                            	<i></i>
-                            	<span>Umowy w procesie inwestycyjnym</span>
-                            </label>
-                        </li>
-                        
-                        <li>
-                            <input type="checkbox" id="spec-4">
-                            <label for="spec-4">
-                            	<i></i>
-                            	<span>Zamówienia publiczne</span>
-                            </label>
-                        </li>
-                        
-                        <li>
-                            <input type="checkbox" id="spec-5">
-                            <label for="spec-5">
-                            	<i></i>
-                            	<span>Kontrola procesu inwestycyjnego</span>
-                            </label>
-                        </li>
-                        
-                        <li>
-                            <input type="checkbox" id="spec-6">
-                            <label for="spec-6">
-                            	<i></i>
-                            	<span>Warunki kontraktowe FIDIC</span>
-                            </label>
-                        </li>
-                        
-                        <li>
-                            <input type="checkbox" id="spec-7">
-                            <label for="spec-7">
-                            	<i></i>
-                            	<span>Postępowanie administracyjne</span>
-                            </label>
-                        </li>
-                    </ul>
-                </div>
+                        <figcaption>
+                            <p class="o-lead o-lead--3">Planowanie przestrzenne</p>
+                            <p class="o-lead o-lead--2">Lorem ipsum dolor sit amet, consectetur</p>
+                        </figcaption>
+                    </figure>
+                </a>
                 
-                <div class="c-filterspanel__box">
-                    <h4 class="title">Wybierz kategorię wpisów</h4>
-                    
-                    <ul>
-                        <li>
-                            <input type="checkbox" checked id="cat-0">
-                            <label for="cat-0">
-                            	<i></i>
-                            	<span>Pokaż wszystkie</span>
-                            </label>
-                        </li>
+                <a href="wpis.html" class="c-grid__item mix spec-3 cat-4">
+                    <figure class="o-box">
+                        <div class="photo">
+                            <img class="b-lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src=<%= require("./img/photos/thumb-04.jpg") %> alt="" width="320" height="320">
+                        </div>
                         
-                        <li>
-                            <input type="checkbox" id="cat-1">
-                            <label for="cat-1">
-                            	<i></i>
-                            	<span>Studia przypadkow</span>
-                            </label>
-                        </li>
+                        <figcaption>
+                            <p class="o-lead o-lead--3">Prawo budowlane</p>
+                            <p class="o-lead o-lead--2">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                        </figcaption>
+                    </figure>
+                </a>
+                
+                
+
+                <a href="wpis.html" class="c-grid__item mix spec-4 cat-2">
+                    <figure class="o-box">
+                        <div class="photo">
+                            <img class="b-lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src=<%= require("./img/photos/thumb-05.jpg") %> alt="" width="320" height="320">
+                        </div>
                         
-                        <li>
-                            <input type="checkbox" id="cat-2">
-                            <label for="cat-2">
-                            	<i></i>
-                            	<span>Jakich błędów unikać?</span>
-                            </label>
-                        </li>
+                        <figcaption>
+                            <p class="o-lead o-lead--3">Prawo budowlane</p>
+                            <p class="o-lead o-lead--2">Lorem ipsum dolor sit amet, consectetur</p>
+                        </figcaption>
+                    </figure>
+                </a>
+                
+                <a href="wpis.html" class="c-grid__item mix spec-1 cat-5">
+                    <figure class="o-box">
+                        <div class="photo">
+                            <img class="b-lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src=<%= require("./img/photos/thumb-06.jpg") %> alt="" width="320" height="320">
+                        </div>
                         
-                        <li>
-                            <input type="checkbox" id="cat-3">
-                            <label for="cat-3">
-                            	<i></i>
-                            	<span>Problemy praktyczne</span>
-                            </label>
-                        </li>
+                        <figcaption>
+                            <p class="o-lead o-lead--3">Zamówienia publiczne</p>
+                            <p class="o-lead o-lead--2">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                        </figcaption>
+                    </figure>
+                </a>
+                   
+                <a href="wpis.html" class="c-grid__item mix spec-3 cat-3">
+                    <figure class="o-box">
+                        <div class="photo">
+                            <img class="b-lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src=<%= require("./img/photos/thumb-07.jpg") %> alt="" width="320" height="320">
+                        </div>
                         
-                        <li>
-                            <input type="checkbox" id="cat-4">
-                            <label for="cat-4">
-                            	<i></i>
-                            	<span>Krótkie poradniki</span>
-                            </label>
-                        </li>
+                        <figcaption>
+                            <p class="o-lead o-lead--3">Planowanie przestrzenne</p>
+                            <p class="o-lead o-lead--2">Lorem ipsum dolor sit amet, consectetur</p>
+                        </figcaption>
+                    </figure>
+                </a>
+                
+                <a href="wpis.html" class="c-grid__item mix spec-4 cat-2">
+                    <figure class="o-box">
+                        <div class="photo">
+                            <img class="b-lazy" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" data-src=<%= require("./img/photos/thumb-08.jpg") %> alt="" width="320" height="320">
+                        </div>
                         
-                        <li>
-                            <input type="checkbox" id="cat-5">
-                            <label for="cat-5">
-                            	<i></i>
-                            	<span>Komentarze do orzeczeń</span>
-                            </label>
-                        </li>
-                        
-                        <li>
-                            <input type="checkbox" id="cat-6">
-                            <label for="cat-6">
-                            	<i></i>
-                            	<span>Zmiany w przepisach</span>
-                            </label>
-                        </li>
-                    </ul>
-                </div>
+                        <figcaption>
+                            <p class="o-lead o-lead--3">Prawo budowlane</p>
+                            <p class="o-lead o-lead--2">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                        </figcaption>
+                    </figure>
+                </a>
 
             </div>
-            
-            
-            <div class="c-grid__content  js-gridContent">
-                <a href="wpis.html" class="c-grid__item">
-                    <figure class="o-box">
-                        <div class="photo">
-                            <img src=<%= require("./img/photos/thumb-01.jpg") %> alt="" width="320" height="320">
-                        </div>
-                        
-                        <figcaption>
-                            <p class="o-lead o-lead--3">Prawo budowlane</p>
-                            <p class="o-lead o-lead--2">Lorem ipsum dolor sit amet, consectetur</p>
-                        </figcaption>
-                    </figure>
-                </a>
-                
-                <a href="wpis.html" class="c-grid__item">
-                    <figure class="o-box">
-                        <div class="photo">
-                            <img src=<%= require("./img/photos/thumb-02.jpg") %> alt="" width="320" height="320">
-                        </div>
-                        
-                        <figcaption>
-                            <p class="o-lead o-lead--3">Zamówienia publiczne</p>
-                            <p class="o-lead o-lead--2">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                        </figcaption>
-                    </figure>
-                </a>
-                   
-                <a href="wpis.html" class="c-grid__item">
-                    <figure class="o-box">
-                        <div class="photo">
-                            <img src=<%= require("./img/photos/thumb-03.jpg") %> alt="" width="320" height="320">
-                        </div>
-                        
-                        <figcaption>
-                            <p class="o-lead o-lead--3">Planowanie przestrzenne</p>
-                            <p class="o-lead o-lead--2">Lorem ipsum dolor sit amet, consectetur</p>
-                        </figcaption>
-                    </figure>
-                </a>
-                
-                <a href="wpis.html" class="c-grid__item">
-                    <figure class="o-box">
-                        <div class="photo">
-                            <img src=<%= require("./img/photos/thumb-04.jpg") %> alt="" width="320" height="320">
-                        </div>
-                        
-                        <figcaption>
-                            <p class="o-lead o-lead--3">Prawo budowlane</p>
-                            <p class="o-lead o-lead--2">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                        </figcaption>
-                    </figure>
-                </a>
-                
-                
-                
-                <a href="wpis.html" class="c-grid__item">
-                    <figure class="o-box">
-                        <div class="photo">
-                            <img src=<%= require("./img/photos/thumb-05.jpg") %> alt="" width="320" height="320">
-                        </div>
-                        
-                        <figcaption>
-                            <p class="o-lead o-lead--3">Prawo budowlane</p>
-                            <p class="o-lead o-lead--2">Lorem ipsum dolor sit amet, consectetur</p>
-                        </figcaption>
-                    </figure>
-                </a>
-                
-                <a href="wpis.html" class="c-grid__item">
-                    <figure class="o-box">
-                        <div class="photo">
-                            <img src=<%= require("./img/photos/thumb-06.jpg") %> alt="" width="320" height="320">
-                        </div>
-                        
-                        <figcaption>
-                            <p class="o-lead o-lead--3">Zamówienia publiczne</p>
-                            <p class="o-lead o-lead--2">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                        </figcaption>
-                    </figure>
-                </a>
-                   
-                <a href="wpis.html" class="c-grid__item">
-                    <figure class="o-box">
-                        <div class="photo">
-                            <img src=<%= require("./img/photos/thumb-07.jpg") %> alt="" width="320" height="320">
-                        </div>
-                        
-                        <figcaption>
-                            <p class="o-lead o-lead--3">Planowanie przestrzenne</p>
-                            <p class="o-lead o-lead--2">Lorem ipsum dolor sit amet, consectetur</p>
-                        </figcaption>
-                    </figure>
-                </a>
-                
-                <a href="wpis.html" class="c-grid__item">
-                    <figure class="o-box">
-                        <div class="photo">
-                            <img src=<%= require("./img/photos/thumb-08.jpg") %> alt="" width="320" height="320">
-                        </div>
-                        
-                        <figcaption>
-                            <p class="o-lead o-lead--3">Prawo budowlane</p>
-                            <p class="o-lead o-lead--2">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                        </figcaption>
-                    </figure>
-                </a>
-            </div>
         </div>
+<!--
         
         <div class="o-more">
             <a href="baza-wiedzy.html">Czytaj więcej</a>
         </div>
+-->
     </div>
 
     <% include ./src/includes/footer %>
