--- a/src/sass/components/_grid.scss
+++ b/src/sass/components/_grid.scss
@@ -1,5 +1,6 @@
 .c-grid {
     @extend %rel;
+    min-height: 100vh;
     //overflow: hidden;
 
     &__content {
@@ -12,6 +13,12 @@
         width: grid(350);
         margin-bottom: 50px;
         padding: 0 grid(20);
+        overflow: hidden;
+        height: 0;
+        &.is-visible {
+            height: auto;
+            overflow: auto;
+        }
         
         @media ( max-width: $tablet_portrait + px ) {
             width: calc(100% / 3);
@@ -24,15 +31,15 @@
     
     &.filters-on {
         @media ( min-width: $tablet_portrait + 1px ) {
-        .c-grid {
-            &__content {
-                width: calc(100% - 25%);
+            .c-grid {
+                &__content {
+                    width: calc(100% - 25%);
+                }
+        
+                &__item {
+                        width: grid(350, 1050);
+                }
             }
-    
-            &__item {
-                    width: grid(350, 1050);
-            }
-        }
         }
     }
 }
