--- a/src/sass/elements/_typography.scss
+++ b/src/sass/elements/_typography.scss
@@ -19,8 +19,10 @@ a {
 	cursor: pointer;
 	text-decoration: none;
 	
-	.is-loaded & {
-        @extend %anim;
+	&:not(.mix) {
+    	.is-loaded & {
+            @extend %anim;
+        }
     }
 	
 	&:hover,
