--- a/src/includes/footer.ejs
+++ b/src/includes/footer.ejs
@@ -12,7 +12,7 @@
                 
                 <div class="o-cols__item">
                     <a href="index.html" class="o-logo">
-                        <img src=<%= require("./img/assets/logo.png") %> alt="konstruktywnie" width="220">
+                        <img src=<%= require("./img/assets/logo.svg") %> alt="konstruktywnie" width="220">
                     </a>
 
                     <ul class="o-social">
