--- a/src/includes/contactform.ejs
+++ b/src/includes/contactform.ejs
@@ -29,7 +29,7 @@
                         	<input type="checkbox" checked id="agree-1">
                             <label for="agree-1">
                             	<i></i>
-                            	<span>Zapoznałam/em się z klauzulą informacyjną dotyczącą przetwarzania danych osobowych</span>
+                            	<span>Zapoznałam/em się z <a href="#">klauzulą informacyjną dotyczącą przetwarzania danych osobowych</a></span>
                             </label>
                         </div>
                         
