--- a/src/includes/homeslider.ejs
+++ b/src/includes/homeslider.ejs
@@ -12,8 +12,11 @@
             </div>
             
         </div>
-        
+
+        <div class="c-homeslider__secondaryholder">
         <div class="c-homeslider__secondary js-secondary">
             <div class="picture"></div>
         </div>
+        </div>
+
     </div>
