--- a/src/includes/searchform.ejs
+++ b/src/includes/searchform.ejs
@@ -2,7 +2,7 @@
     <div class="o-overlay" id="search">
         <div class="o-overlay__inside">
             <div class="o-wrap">
-                <form action="#" class="c-searchform">
+                <form action="#" class="c-searchform" id="search-form">
                     <input type="text" class="form-field" placeholder="Jakiego produktu szukasz?"> 
 
                     <button type="submit" class="o-btn o-btn--minor">
