--- a/src/includes/specbox.ejs
+++ b/src/includes/specbox.ejs
@@ -1,48 +1,48 @@
 
     <div class="c-specbox">
-        <div class="c-specbox__item anim anim--delay1 anim--up" style="opacity: 0">
+        <div class="c-specbox__item anim anim--delay1 anim--up">
             <a href="baza-wiedzy.html">
                 <i class="num"></i>
                 <p>Prawo<br> budowlane</p>
             </a>
         </div>
         
-        <div class="c-specbox__item anim anim--delay2 anim--up" style="opacity: 0">
+        <div class="c-specbox__item anim anim--delay2 anim--up">
             <a href="baza-wiedzy.html">
                 <i class="num"></i>
                 <p>Planowanie<br> przestrzenne</p>
             </a>
         </div>
         
-        <div class="c-specbox__item anim anim--delay3 anim--up" style="opacity: 0">
+        <div class="c-specbox__item anim anim--delay3 anim--up">
             <a href="baza-wiedzy.html">
                 <i class="num"></i>
                 <p>Umowy w procesie<br> inwestycyjnym</p>
             </a>
         </div>
         
-        <div class="c-specbox__item anim anim--delay4 anim--up" style="opacity: 0">
+        <div class="c-specbox__item anim anim--delay4 anim--up">
             <a href="baza-wiedzy.html">
                 <i class="num"></i>
                 <p>Zamówienia<br> publiczne</p>
             </a>
         </div>
         
-        <div class="c-specbox__item anim anim--delay5 anim--up" style="opacity: 0">
+        <div class="c-specbox__item anim anim--delay5 anim--up">
             <a href="baza-wiedzy.html">
                 <i class="num"></i>
                 <p>Kontrola<br> procesu<br> inwestycyjnego</p>
             </a>
         </div>
         
-        <div class="c-specbox__item anim anim--delay6 anim--up" style="opacity: 0">
+        <div class="c-specbox__item anim anim--delay6 anim--up">
             <a href="baza-wiedzy.html">
                 <i class="num"></i>
                 <p>Warunki<br> kontraktowe<br> FIDIC</p>
             </a>
         </div>
         
-        <div class="c-specbox__item anim anim--delay7 anim--up" style="opacity: 0">
+        <div class="c-specbox__item anim anim--delay7 anim--up">
             <a href="baza-wiedzy.html">
                 <i class="num"></i>
                 <p>Postępowanie<br> administracyjne</p>
