--- a/src/sass/elements/_typography.scss
+++ b/src/sass/elements/_typography.scss
@@ -20,7 +20,7 @@ a {
 	text-decoration: none;
 	
 	&:not(.mix) {
-    	.is-loaded & {
+    	.start-transitions & {
             @extend %anim;
         }
     }
