--- a/src/sass/objects/_article.scss
+++ b/src/sass/objects/_article.scss
@@ -1,5 +1,6 @@
 .o-article {
-    
+    text-align: justify;
+
     @media ( max-width: $tablet_portrait + px ) {
     	max-width: 480px;
     	margin: 0 auto;
