--- a/src/wpis.ejs
+++ b/src/wpis.ejs
@@ -1,5 +1,5 @@
 <% include ./src/includes/head %>
-<body class="single-page">
+<body class="single">
 
     <% include ./src/includes/top-baza %>
 
@@ -18,25 +18,25 @@ consectetur adipiscing elit ex ea commodo </h1>
             <div class="o-wrap o-wrap--narrow">
                 <article class="o-article">
                     
-                    <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud culpa qui officia deserunt mollit anim id est laborum.""Lorem ipsum dolor sit amet, consectetur</h3>
+                    <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud culpa qui officia deserunt mollit anim id est laborum Lorem ipsum dolor sit amet, consectetur</h3>
                     
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud culpa qui officia deserunt mollit anim id est laborum.""Lorem ipsum dolor sit amet, consectetur 
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur 
 adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud culpa im 
-ad minim veniam, quis nostrud culpa qui officia deserunt mollit anim id est laborum." id est laborum.""Lorem ipsum dolor sit amet, consectetur.</p>
+ad minim veniam, quis nostrud culpa qui officia deserunt mollit anim id est laborum. id est laborum. Lorem ipsum dolor sit amet, consectetur.</p>
 
                     <div class="aligncenter">
                         <img src=<%= require("./img/photos/single-1.jpg") %> alt="" width="776" height="571">
                     </div>
                     
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud culpa qui officia deserunt mollit anim id est laborum.""Lorem ipsum dolor sit amet, consectetur 
-adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud culpa qui officia deserunt mollit anim id est laborum. officia deserunt mollit anim id est laborum.""Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur 
+adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud culpa qui officia deserunt mollit anim id est laborum. officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud culpa qui officia deserunt mollit anim id est laborum.</p>
 
                     <div class="aligncenter">
                         <img src=<%= require("./img/photos/single-2.jpg") %> alt="" width="776" height="273">
                     </div>
                     
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud culpa qui officia deserunt mollit anim id est laborum.""Lorem ipsum dolor sit amet, consectetur 
-adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud culpa qui officia deserunt mollit anim id est laborum. officia deserunt mollit anim id est laborum.""Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur 
+adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud culpa qui officia deserunt mollit anim id est laborum. officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud culpa qui officia deserunt mollit anim id est laborum.</p>
 
                 </article>
             </div>
