--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -3,6 +3,14 @@
     margin-top: 100px;
     padding: 30px 0;
     
+    a {
+        &:hover {
+            .desktop & {
+                color: $c-primary;
+            }
+        }
+    }
+    
     address {
 
         p {
