--- a/src/sass/components/_homeslider.scss
+++ b/src/sass/components/_homeslider.scss
@@ -1,13 +1,54 @@
 .c-homeslider {
-    height: 100vh;
+    @extend %rel;
+    //@extend %flex;
+    //@extend %flex-wrap;
+    //flex-direction: column;
+    justify-content: flex-end;
+    height: calc(100vh - 210px);
+    margin-top: 110px;
+    
     //height: calc(100vh + 150px);
     //max-height: 900px;
+    background: {
+        image: url(../img/photos/obrys.jpg);
+        repeat: no-repeat;
+        position: right center;
+        size: cover;
+    }
+    
+    @media ( min-width: $tablet + 1px ) {
+       // margin-bottom: 100px;
+    }
+    
+    &:after {
+        @extend %abs-pseudo;
+        top: 0; right: 0; z-index: 6;
+        width: 100%; height: 100%;
+        background: rgba(255,255,255,0);
+background: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 64%, rgba(255,255,255,1) 100%);
+background: -webkit-gradient(left top, right top, color-stop(0%, rgba(255,255,255,0)), color-stop(64%, rgba(255,255,255,1)), color-stop(100%, rgba(255,255,255,1)));
+background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 64%, rgba(255,255,255,1) 100%);
+background: -o-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 64%, rgba(255,255,255,1) 100%);
+background: -ms-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 64%, rgba(255,255,255,1) 100%);
+background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 64%, rgba(255,255,255,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff', GradientType=1 );
+opacity: .94;
+
+        @media ( max-width: $smartphone_portrait + px ) {
+        	right: auto;
+        	left: 0;
+        	transform: scaleX(-1);
+        }
+    }
+    
+/*
     background: {
         image: url($path_img + '/assets/top.jpg');
         repeat: no-repeat;
         position: right center;
         size: cover;
     }
+*/
     
     @media ( max-width: $smartphone + px ) {
         //background-position: 80% center;
@@ -45,6 +86,7 @@
         p {
             @extend %lead--4;
             max-width: 420px;
+            text-align: justify;
             opacity: .98;            
         }
 
@@ -70,6 +112,13 @@
         height: 100%;
     }
     
+    &__secondaryholder {
+        @extend %abs;
+        top: 0;
+        width: 100%;
+        height: calc(100vh - 210px);
+    }
+    
     &__secondary {
         @extend %abs;
         width: 100%;
@@ -84,13 +133,22 @@
             width: 100%;
             left: 0; bottom: 0;
             height: auto;
-            min-height: 100vh;
+            min-height: calc(100vh - 210px);
+            background: {
+                image: url(../img/photos/full.jpg);
+                repeat: no-repeat;
+                position: right center;
+                size: cover;
+            }
+/*
+            
             background: {
                 image: url($path_img + '/assets/top2.jpg');
                 repeat: no-repeat;
                 position: right center;
                 size: cover;
             }
+*/
         }
         
 /*
