--- a/src/sass/components/_specbox.scss
+++ b/src/sass/components/_specbox.scss
@@ -1,8 +1,16 @@
 .c-specbox {
     @extend %flex;
-    //transform: translate3d(0, -50px, 0);
-    counter-reset: section;
+    position: relative; z-index: 15;
+    transform: translate3d(0, -50px, 0);
+    //margin-top: -50px;
     
+    counter-reset: section;
+    //align-self: flex-end;
+    
+    @media ( min-width: $tablet + 1px ) {
+    	//transform: translate3d(0, 50%, 0);
+    }
+
     @media ( max-width: $tablet + px ) {
         flex-wrap: wrap;
     }
@@ -11,6 +19,10 @@
         @extend %rel;
         flex: 1;        
         margin: 0 15px;
+        
+        &.anim {
+            //opacity: 1 !important;
+        }
         
         @media ( max-width: $desktop + px ) {
         	margin: 0 5px;
