--- a/src/sass/objects/_box.scss
+++ b/src/sass/objects/_box.scss
@@ -4,6 +4,10 @@
     text-align: center;
     height: 100%;
     padding-bottom: 50px;
+    
+    figcaption {
+        padding: 0 10px;
+    }
 
     .photo {
         margin-bottom: 45px;
